# nfnets_pytorch

./: .gitattributes  .gitignore  README.md  dataset.py  default_config.yaml  demo.ipynb  demo.py  eval.py  model.py  optim.py  pretrained.py  requirements.txt  setup.cfg  test_model.py  train.py
nfnets/: __init__.py  model.py  pretrained.py
pretrained/: README.md
utils/: checkpointing.py  logging.py
