[metadata]
name=nfnets_pytorch
version=0.0.1
author=Benjamin Schmidt
author_email = webmaster@benjs.de
license=Apache 2.0
license_file=LICENSE
description=Implementation of the paper "High-Performance Large-Scale Image Recognition Without Normalization" by Brock et al.
long_description=file:README.md
long_description_content_type=text/markdown
url=https://github.com/benjs/nfnets_pytorch
project_urls =
    Bug Tracker = https://github.com/benjs/nfnets_pytorch/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Natural Language :: English

[options]
packages = nfnets
python_requires = >=3.7
install_requires =  
    dm-haiku
    requests
    dill
    jax
    jaxlib
    numpy
    requests
    torch>=1.7

dependency_links=
    git+https://github.com/deepmind/dm-haiku
    https://download.pytorch.org/whl/torch_stable.html